# pyiproute2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyiproute2/: bridge.py  ip.py  ss.py  tc.py
